--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "@thirdweb-dev/react": "^3.5.2",
+    "@thirdweb-dev/sdk": "^3.5.2",
+    "canvas-confetti": "^1.6.0",
+    "ethers": "^5.7.2",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-countdown": "^2.3.3",
+    "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.3.5",
+    "react-hot-toast": "^2.4.0",
+    "react-spinners": "^0.13.6"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
